fix tab menu alignment issue

--- a/themes/ansible-community/sass/_homepage-tab-menu-band.scss
+++ b/themes/ansible-community/sass/_homepage-tab-menu-band.scss
@@ -20,3 +20,21 @@
     color: $cyan;
   }
 }
+
+.tab-menu-anchor {
+  display: flex;
+  padding: 1.75rem;
+  justify-content: center;
+  font-size: $font-lg;
+  img {
+    float: left;
+    margin-right: 0.25rem;
+  }
+  p {
+    white-space: nowrap;
+  }
+  &:hover {
+    background-color: $white;
+    color: $navy;
+  }
+}
